# OntologyPOC

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
api/: README.md  main.py
api/core/: __init__.py  config.py  database.py
api/models/: __init__.py  anomaly.py  equipment.py  maintenance.py  prediction.py  response.py  sensor.py
api/routers/: __init__.py  anomalies.py  equipment.py  maintenance.py  predictions.py  sensors.py
api/services/: __init__.py  neo4j_service.py
dashboard/: README.md  app.py
dashboard/pages/: 1_equipment.py  2_anomaly.py  3_prediction.py  4_energy.py  5_maintenance.py
dashboard/utils/: __init__.py  neo4j_client.py  queries.py
docs/: PLAN_01_STREAMLIT_DASHBOARD.md  PLAN_02_FASTAPI_REST_API.md  PLAN_03_ANOMALY_DETECTION.md
ml/: README.md  anomaly_detection.py  data_loader.py  predict.py  preprocessing.py  train.py
neo4j/: import-docker.cypher  import.cypher  verify.cypher
ontology/: sample_data.ttl  upw.owl.ttl
queries/: examples.cypher
scripts/: run.sh  validate.sh
