[project]
name = "ontology-poc"
version = "0.1.0"
description = "UPW Process Ontology with Dashboard, API, and ML"
authors = [
    {name = "jhdevelop01"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Neo4j
    "neo4j>=5.14.0",

    # Dashboard (Streamlit)
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",

    # API (FastAPI)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ML (Anomaly Detection)
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",

    # Common
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "dashboard" },
    { include = "api" },
    { include = "ml" },
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
